--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    <script src="index.js"></script>
+    <script src="./main.js"></script>
     
 </body>
 </html>
